# sdk-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  audit.md  demo_sdk.py  pyproject.toml  setup.py
.github/workflows/: lint.yml  test.yml
benchmarks/: bench_async_vs_sync.py  bench_batch_operations.py
brightdata-sdk/: .gitignore  .pre-commit-config.yaml  MANIFEST.in  requirements-dev.txt  requirements.txt  test_functionality.py
brightdata-sdk/.github/workflows/: lint.yml  publish.yml  test.yml
brightdata-sdk/benchmarks/: bench_memory_usage.py
brightdata-sdk/docs/: architecture.md
brightdata-sdk/examples/: 01_simple_scrape.py  04_specialized_scrapers.py  07_advanced_usage.py
brightdata-sdk/src/brightdata/: __init__.py  client.py  config.py  constants.py  models.py  protocols.py  types.py
brightdata-sdk/src/brightdata/api/: base.py  crawl.py  datasets.py  download.py  serp.py  web_unlocker.py
brightdata-sdk/src/brightdata/core/: auth.py  engine.py  zone_manager.py
brightdata-sdk/src/brightdata/exceptions/: __init__.py  errors.py
brightdata-sdk/src/brightdata/scrapers/: __init__.py  base.py  registry.py
brightdata-sdk/src/brightdata/utils/: parsing.py  polling.py  retry.py  url.py  validation.py
brightdata-sdk/tests/e2e/: test_async_operations.py
brightdata-sdk/tests/integration/: test_web_unlocker_api.py
brightdata-sdk/tests/unit/: test_client.py  test_engine.py  test_models.py  test_retry.py  test_validation.py
docs/: index.md
examples/: 02_async_scrape.py  03_batch_scraping.py  05_browser_automation.py  06_web_crawling.py  08_result_models.py  09_result_models_demo.py  10_pandas_integration.py  11_trigger_interface.py  zone_management_demo.py
new-sdk/: README.md
notebooks/: 01_quickstart.ipynb  02_pandas_integration.ipynb  03_amazon_scraping.ipynb  04_linkedin_jobs.ipynb  05_batch_processing.ipynb
old-sdk/: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  pyproject.toml  requirements.txt  setup.py
old-sdk/.github/workflows/: publish.yml  test.yml
old-sdk/brightdata/: __init__.py  client.py
old-sdk/brightdata/api/: __init__.py  chatgpt.py  crawl.py  download.py  extract.py  linkedin.py  scraper.py  search.py
old-sdk/brightdata/exceptions/: __init__.py  errors.py
old-sdk/brightdata/utils/: __init__.py  logging_config.py  parser.py  response_validator.py  retry.py  validation.py  zone_manager.py
old-sdk/examples/: browser_connection_example.py  crawl_example.py  download_snapshot_example.py  extract_example.py  scrape_chatgpt_example.py  scrape_example.py  scrape_linkedin_example.py  search_example.py  search_linkedin_example.py
old-sdk/tests/: test_client.py
src/brightdata/: __init__.py  _version.py  auto.py  client.py  config.py  constants.py  models.py  payloads.py  protocols.py  types.py
src/brightdata/_internal/: __init__.py  compat.py
src/brightdata/api/: __init__.py  base.py  crawl.py  crawler_service.py  datasets.py  download.py  scrape_service.py  search_service.py  serp.py  web_unlocker.py
src/brightdata/api/browser/: __init__.py  browser_api.py  browser_pool.py  (+2 more)
src/brightdata/cli/: __init__.py  banner.py  main.py  utils.py
src/brightdata/core/: auth.py  engine.py  hooks.py  logging.py  zone_manager.py
src/brightdata/exceptions/: __init__.py  errors.py
src/brightdata/formatters/: __init__.py  base.py  json_formatter.py  markdown.py  minimal_formatter.py  pretty_formatter.py  registry.py
src/brightdata/scrapers/: __init__.py  api_client.py  base.py  job.py  registry.py  workflow.py
src/brightdata/utils/: __init__.py  function_detection.py  location.py  parsing.py  polling.py  retry.py  ssl_helpers.py  timing.py  url.py  validation.py
tests/: conftest.py  readme.py
tests/e2e/: test_async_operations.py  test_batch_scrape.py  test_client_e2e.py  test_simple_scrape.py
tests/enes/: amazon.py  amazon_search.py  chatgpt.py  chatgpt_02.py  delete_zone_demo.py  facebook.py  get_dataset_metadata.py  get_datasets.py  instagram.py  linkedin.py  serp.py  web_unlocker.py
tests/enes/zones/: auto_zone.py  auto_zones.py  cache_fix.py  clean_zones.py  crud_zones.py  dash_sync.py  delete_zone.py  list_zones.py  permission.py  test_cache.py
tests/integration/: test_browser_api.py  test_client_integration.py  test_crawl_api.py  test_serp_api.py  test_web_unlocker_api.py
tests/unit/: test_amazon.py  test_chatgpt.py  test_client.py  test_constants.py  test_engine.py  test_engine_sharing.py  test_facebook.py  test_function_detection.py  test_instagram.py  test_linkedin.py  test_markdown.py  test_models.py  test_payloads.py  test_retry.py  test_scrapers.py  test_serp.py  test_ssl_helpers.py  test_validation.py  test_zone_manager.py
(+35 files in other folders)
